# skymarket_app

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: action.yml
infra/: docker-compose.yaml
skymarket/ads/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
skymarket/ads/migrations/: 0001_initial.py  0002_initial.py  0003_alter_ad_author_alter_comment_ad_and_more.py
skymarket/redoc/: apps.py
skymarket/skymarket/: asgi.py  settings.py  urls.py  wsgi.py
skymarket/users/: admin.py  email.py  managers.py  models.py  serializers.py
skymarket/users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_first_name_and_more.py
