[tool.poetry]
name = "skymarket"
version = "0.1.0"
description = ""
authors = ["dalbezh <dalbezh@icloud.com>"]
readme = "README.md"
packages = [{include = "skymarket"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
psycopg2-binary = "^2.9.6"
pillow = "^9.5.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
pytest-django = "^4.5.2"
pytest-factoryboy = "^2.5.1"
django-cors-headers = "^4.0.0"
drf-spectacular = "^0.26.2"
python-dotenv = "^1.0.0"
djoser = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
